Converted metahub to Typescript.

--- a/test/test.html
+++ b/test/test.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
     <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
 
-    <script type="text/javascript" src="../metahub.js"></script>
+    <script type="text/javascript" src="../metahub_old.js"></script>
     <script type="text/javascript" src="metahub.test.tools.js"></script>
     <script type="text/javascript" src="metahub-test.js"></script>
     <title>MetaHub Test</title>
